--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -1050,6 +1050,25 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\QHLFEMNF\\Buckley and Sack - 2019 - The humidity inside leaves and why you should care.pdf}
 }
 
+@article{buckleyOptimalCarbonPartitioning2021,
+  title = {Optimal Carbon Partitioning Helps Reconcile the Apparent Divergence between Optimal and Observed Canopy Profiles of Photosynthetic Capacity},
+  author = {Buckley, Thomas N.},
+  date = {2021},
+  journaltitle = {New Phytologist},
+  volume = {230},
+  number = {6},
+  pages = {2246--2260},
+  issn = {1469-8137},
+  doi = {10.1111/nph.17199},
+  url = {http://nph.onlinelibrary.wiley.com/doi/abs/10.1111/nph.17199},
+  urldate = {2021-08-22},
+  abstract = {Photosynthetic capacity per unit irradiance is greater, and the marginal carbon revenue of water (∂A/∂E) is smaller, in shaded leaves than sunlit leaves, apparently contradicting optimization theory. I tested the hypothesis that these patterns arise from optimal carbon partitioning subject to biophysical constraints on leaf water potential. In a whole plant model with two canopy modules, I adjusted carbon partitioning, nitrogen partitioning and leaf water potential to maximize carbon profit or canopy photosynthesis, and recorded how gas exchange parameters compared between shaded and sunlit modules in the optimum. The model predicted that photosynthetic capacity per unit irradiance should be larger, and ∂A/∂E smaller, in shaded modules compared to sunlit modules. This was attributable partly to radiation-driven differences in evaporative demand, and partly to differences in hydraulic conductance arising from the need to balance marginal returns on stem carbon investment between modules. The model verified, however, that invariance in the marginal carbon revenue of N (∂A/∂N) is in fact optimal. The Cowan–Farquhar optimality solution (invariance of ∂A/∂E) does not apply to spatial variation within a canopy. The resulting variation in carbon–water economy explains differences in capacity per unit irradiance, reconciling optimization theory with observations.},
+  langid = {english},
+  keywords = {canopies,optimality,photosynthesis,stomata,transpiration},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/nph.17199},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\3WQUDSJJ\\Buckley - 2021 - Optimal carbon partitioning helps reconcile the ap.pdf;C\:\\Users\\Me\\Zotero\\storage\\G3Q2ACNV\\nph.html}
+}
+
 @book{campbell_introduction_1998,
   title = {An {{Introduction}} to {{Environmental Biophysics}}},
   author = {Campbell, G. and Norman, J.},
@@ -5328,6 +5347,25 @@
   keywords = {independent contrasts,leaf traits,light,plant functional types,sapling,seedling,specific leaf area},
   annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/j.1469-8137.2007.02264.x},
   file = {C\:\\Users\\Me\\Zotero\\storage\\LXC6BQXL\\Lusk and Warton - 2007 - Global meta-analysis shows that relationships of l.pdf;C\:\\Users\\Me\\Zotero\\storage\\JKGEVYQY\\j.1469-8137.2007.02264.html}
+}
+
+@article{luskWhyAreEvergreen2008,
+  title = {Why Are Evergreen Leaves so Contrary about Shade?},
+  author = {Lusk, Christopher H. and Reich, Peter B. and Montgomery, Rebecca A. and Ackerly, David D. and Cavender-Bares, Jeannine},
+  date = {2008-06-01},
+  journaltitle = {Trends in Ecology \& Evolution},
+  volume = {23},
+  number = {6},
+  eprint = {18439708},
+  eprinttype = {pmid},
+  pages = {299--303},
+  publisher = {{Elsevier}},
+  issn = {0169-5347},
+  doi = {10.1016/j.tree.2008.02.006},
+  url = {https://www.cell.com/trends/ecology-evolution/abstract/S0169-5347(08)00127-4},
+  urldate = {2021-08-22},
+  langid = {english},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\WDXWAGUB\\S0169-5347(08)00127-4.html}
 }
 
 @article{macekMaximumAirTemperature2019,
